kubernetes/config-files/c-deployment-example.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: someReplicaSet
  labels:
    a: somedata


spec:
  template:
    metadata:
      name: somePod
    labels:
      type: nginx
    spec:
      containers:
        - name: someContainer
          image: nginx
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
  replicas: 3 # amount of replicas

  # the selector must match the pod template, the reason selector is used, is because ReplicaSet has the ability to match several pods outside of this definiton
  selector: 
    matchLabels:
      type: nginx
